objects/TS_Task__x.object
<CustomObject>
    <externalDataSource>TSOrg_C2S_TSTask</externalDataSource>
    <externalName>Task</externalName>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <externalDeveloperName>ActivityDate</externalDeveloperName>
        <label>Due Date Only</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CallDisposition__c</fullName>
        <externalDeveloperName>CallDisposition</externalDeveloperName>
        <label>Call Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallDurationInSeconds__c</fullName>
        <externalDeveloperName>CallDurationInSeconds</externalDeveloperName>
        <label>Call Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallObject__c</fullName>
        <externalDeveloperName>CallObject</externalDeveloperName>
        <label>Call Object Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallType__c</fullName>
        <externalDeveloperName>CallType</externalDeveloperName>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checkstatus_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Checkstatus__c</externalDeveloperName>
        <label>Checkstatus</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Date_c__c</fullName>
        <externalDeveloperName>Closed_Date__c</externalDeveloperName>
        <label>Closed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments_Directions_c__c</fullName>
        <externalDeveloperName>Comments_Directions__c</externalDeveloperName>
        <label>Comments/Reassignment Directions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_in_SAL_status_c__c</fullName>
        <externalDeveloperName>Days_in_SAL_status__c</externalDeveloperName>
        <label>Days in SAL status</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_SQL_Status_c__c</fullName>
        <externalDeveloperName>Days_in_SQL_Status__c</externalDeveloperName>
        <label>Days in SQL Status</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_you_consider_this_a_lead_c__c</fullName>
        <externalDeveloperName>Do_you_consider_this_a_lead__c</externalDeveloperName>
        <label>Do you consider this a lead?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enough_Information_for_Follow_up_c__c</fullName>
        <externalDeveloperName>Enough_Information_for_Follow_up__c</externalDeveloperName>
        <label>Enough Information for Follow-up?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsArchived</externalDeveloperName>
        <label>Archived</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsClosed</externalDeveloperName>
        <label>Closed</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHighPriority__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsHighPriority</externalDeveloperName>
        <label>High Priority</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecurrence__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsRecurrence</externalDeveloperName>
        <label>Create Recurring Series of Tasks</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReminderSet__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsReminderSet</externalDeveloperName>
        <label>Reminder Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Statuss_c__c</fullName>
        <externalDeveloperName>Latest_Statuss__c</externalDeveloperName>
        <label>Latest Status</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source_c__c</fullName>
        <externalDeveloperName>Lead_Source__c</externalDeveloperName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PIC</fullName>
                </value>
                <value>
                    <fullName>Sample Request</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>TE Event</fullName>
                </value>
                <value>
                    <fullName>TE.com Contact Us</fullName>
                </value>
                <value>
                    <fullName>TE.com Registration</fullName>
                </value>
                <value>
                    <fullName>Field Sales/Internal (Except PIC)</fullName>
                </value>
                <value>
                    <fullName>Cannot be Determined</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MQL_days_c__c</fullName>
        <externalDeveloperName>MQL_days__c</externalDeveloperName>
        <label>Days in MQL Status</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityID_of_C2S_c__c</fullName>
        <externalDeveloperName>OpportunityID_of_C2S__c</externalDeveloperName>
        <label>OpportunityID of C2S</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Awareness_c__c</fullName>
        <externalDeveloperName>Opportunity_Awareness__c</externalDeveloperName>
        <label>Opportunity Awareness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Previously received information from PIC</fullName>
                </value>
                <value>
                    <fullName>Already aware of this opportunity from customer</fullName>
                </value>
                <value>
                    <fullName>Already aware of this opportunity from internal communication</fullName>
                </value>
                <value>
                    <fullName>No, I was not aware of this opportunity</fullName>
                </value>
                <value>
                    <fullName>There is no Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_c__c</fullName>
        <externalDeveloperName>Opportunity_Stage__c</externalDeveloperName>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type_c__c</fullName>
        <externalDeveloperName>Opportunity_Type__c</externalDeveloperName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Project</fullName>
                </value>
                <value>
                    <fullName>Eng. Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Value_c__c</fullName>
        <externalDeveloperName>Opportunity_Value__c</externalDeveloperName>
        <label>Opportunity Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <externalDeveloperName>OpportunityID_of_C2S__c</externalDeveloperName>
        <label>Opportunity</label>
        <length>255</length>
        <referenceTargetField>Opportunity.TS_TaskId__c</referenceTargetField>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_c__c</fullName>
        <externalDeveloperName>Opportunity__c</externalDeveloperName>
        <label>Opportunity$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Assigned To ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <externalDeveloperName>Priority</externalDeveloperName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Task Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurrenceActivityId__c</fullName>
        <externalDeveloperName>RecurrenceActivityId</externalDeveloperName>
        <label>Recurrence Activity ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurrenceDayOfMonth__c</fullName>
        <externalDeveloperName>RecurrenceDayOfMonth</externalDeveloperName>
        <label>Recurrence Day of Month</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecurrenceDayOfWeekMask__c</fullName>
        <externalDeveloperName>RecurrenceDayOfWeekMask</externalDeveloperName>
        <label>Recurrence Day of Week Mask</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecurrenceEndDateOnly__c</fullName>
        <externalDeveloperName>RecurrenceEndDateOnly</externalDeveloperName>
        <label>Recurrence End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecurrenceInstance__c</fullName>
        <externalDeveloperName>RecurrenceInstance</externalDeveloperName>
        <label>Recurrence Instance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Third</fullName>
                </value>
                <value>
                    <fullName>Fourth</fullName>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecurrenceInterval__c</fullName>
        <externalDeveloperName>RecurrenceInterval</externalDeveloperName>
        <label>Recurrence Interval</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecurrenceMonthOfYear__c</fullName>
        <externalDeveloperName>RecurrenceMonthOfYear</externalDeveloperName>
        <label>Recurrence Month of Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecurrenceRegeneratedType__c</fullName>
        <externalDeveloperName>RecurrenceRegeneratedType</externalDeveloperName>
        <label>Repeat This Task</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RecurrenceRegenerateAfterDueDate</fullName>
                </value>
                <value>
                    <fullName>RecurrenceRegenerateAfterToday</fullName>
                </value>
                <value>
                    <fullName>RecurrenceRegenerated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecurrenceStartDateOnly__c</fullName>
        <externalDeveloperName>RecurrenceStartDateOnly</externalDeveloperName>
        <label>Recurrence Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecurrenceTimeZoneSidKey__c</fullName>
        <externalDeveloperName>RecurrenceTimeZoneSidKey</externalDeveloperName>
        <label>Recurrence Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Ho_Chi_Minh</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dhaka</fullName>
                </value>
                <value>
                    <fullName>Asia/Kathmandu</fullName>
                </value>
                <value>
                    <fullName>Asia/Colombo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecurrenceType__c</fullName>
        <externalDeveloperName>RecurrenceType</externalDeveloperName>
        <label>Recurrence Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RecursDaily</fullName>
                </value>
                <value>
                    <fullName>RecursEveryWeekday</fullName>
                </value>
                <value>
                    <fullName>RecursMonthly</fullName>
                </value>
                <value>
                    <fullName>RecursMonthlyNth</fullName>
                </value>
                <value>
                    <fullName>RecursWeekly</fullName>
                </value>
                <value>
                    <fullName>RecursYearly</fullName>
                </value>
                <value>
                    <fullName>RecursYearlyNth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejected_reason_c__c</fullName>
        <externalDeveloperName>Rejected_reason__c</externalDeveloperName>
        <label>Rejected Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bad contact data</fullName>
                </value>
                <value>
                    <fullName>No immediate opportunity</fullName>
                </value>
                <value>
                    <fullName>Non or unrelated business/competitor</fullName>
                </value>
                <value>
                    <fullName>Non-responsive lead</fullName>
                </value>
                <value>
                    <fullName>This lead does not belong to my business unit</fullName>
                </value>
                <value>
                    <fullName>Rejected_due_to_Age_Backlog_Cleanup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReminderDateTime__c</fullName>
        <externalDeveloperName>ReminderDateTime</externalDeveloperName>
        <label>Reminder Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MQL - Marketing Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>SAL - Sales Accepted Lead</fullName>
                </value>
                <value>
                    <fullName>SQL - Sales Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Reassign</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <externalDeveloperName>Subject</externalDeveloperName>
        <label>Subject</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Send Letter</fullName>
                </value>
                <value>
                    <fullName>Send Quote</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Lead Follow up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TaskSubtype__c</fullName>
        <externalDeveloperName>TaskSubtype</externalDeveloperName>
        <label>Task Subtype</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalValue_c__c</fullName>
        <externalDeveloperName>TotalValue__c</externalDeveloperName>
        <label>Program Segment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatCount__c</fullName>
        <externalDeveloperName>WhatCount</externalDeveloperName>
        <label>Related To Count</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WhatId__c</fullName>
        <externalDeveloperName>WhatId</externalDeveloperName>
        <label>Related To ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhoCount__c</fullName>
        <externalDeveloperName>WhoCount</externalDeveloperName>
        <label>Relation Count</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WhoId__c</fullName>
        <externalDeveloperName>WhoId</externalDeveloperName>
        <label>Name ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Created_by_Cirrus_Insight_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>cirrusadv__Created_by_Cirrus_Insight__c</externalDeveloperName>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Day_Activity_Created_c__c</fullName>
        <externalDeveloperName>cirrusadv__Day_Activity_Created__c</externalDeveloperName>
        <label>Day Activity Created</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Email_Opened_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>cirrusadv__Email_Opened__c</externalDeveloperName>
        <label>Email Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv_First_Clicked_c__c</fullName>
        <externalDeveloperName>cirrusadv__First_Clicked__c</externalDeveloperName>
        <label>First Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv_First_Opened_c__c</fullName>
        <externalDeveloperName>cirrusadv__First_Opened__c</externalDeveloperName>
        <label>First Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv_First_Reply_c__c</fullName>
        <externalDeveloperName>cirrusadv__First_Reply__c</externalDeveloperName>
        <label>First Reply</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Hour_Sent_c__c</fullName>
        <externalDeveloperName>cirrusadv__Hour_Sent__c</externalDeveloperName>
        <label>Hour Sent (UTC)</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Hour_c__c</fullName>
        <externalDeveloperName>cirrusadv__Hour__c</externalDeveloperName>
        <label>Hour</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Last_Clicked_c__c</fullName>
        <externalDeveloperName>cirrusadv__Last_Clicked__c</externalDeveloperName>
        <label>Last Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Last_Opened_c__c</fullName>
        <externalDeveloperName>cirrusadv__Last_Opened__c</externalDeveloperName>
        <label>Last Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Last_Reply_c__c</fullName>
        <externalDeveloperName>cirrusadv__Last_Reply__c</externalDeveloperName>
        <label>Last Reply</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Links_Clicked_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>cirrusadv__Links_Clicked__c</externalDeveloperName>
        <label>Links Clicked</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Num_of_Clicks_c__c</fullName>
        <externalDeveloperName>cirrusadv__Num_of_Clicks__c</externalDeveloperName>
        <label># of Clicks</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Num_of_Opens_c__c</fullName>
        <externalDeveloperName>cirrusadv__Num_of_Opens__c</externalDeveloperName>
        <label># of Opens</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Num_of_Replies_c__c</fullName>
        <externalDeveloperName>cirrusadv__Num_of_Replies__c</externalDeveloperName>
        <label># of Replies</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Reply_Received_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>cirrusadv__Reply_Received__c</externalDeveloperName>
        <label>Reply Received</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Template_Name_c__c</fullName>
        <externalDeveloperName>cirrusadv__Template_Name__c</externalDeveloperName>
        <label>Template Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Time_to_Open_c__c</fullName>
        <externalDeveloperName>cirrusadv__Time_to_Open__c</externalDeveloperName>
        <label>Time to Open</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv_isTracked_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>cirrusadv__isTracked__c</externalDeveloperName>
        <label>Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mqldays_c__c</fullName>
        <externalDeveloperName>mqldays__c</externalDeveloperName>
        <label>mqldays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>saldays_c__c</fullName>
        <externalDeveloperName>saldays__c</externalDeveloperName>
        <label>saldays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sqldays_c__c</fullName>
        <externalDeveloperName>sqldays__c</externalDeveloperName>
        <label>sqldays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Task</label>
    <pluralLabel>Tasks</pluralLabel>
</CustomObject>